--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -4,7 +4,7 @@
     "dashboard",
     "dashboard-readline"
   ],
-  "theme": "obsidian",
+  "theme": "moonstone",
   "baseFontSize": 13,
   "cssTheme": ""
 }
